Final touches to API
