# app-service/api-docs/api-docs.yaml
@@ -19,10 +19,6 @@ paths:
           type: integer
           format: int32
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -47,10 +43,6 @@ paths:
               $ref: "#/components/schemas/UserDTO"
         required: true
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -69,10 +61,6 @@ paths:
           type: integer
           format: int32
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -92,10 +80,6 @@ paths:
           type: integer
           format: int32
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -120,10 +104,6 @@ paths:
               $ref: "#/components/schemas/ReviewDTO"
         required: true
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -142,10 +122,6 @@ paths:
           type: integer
           format: int32
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -165,10 +141,6 @@ paths:
           type: integer
           format: int32
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -193,10 +165,6 @@ paths:
               $ref: "#/components/schemas/ProductDTO"
         required: true
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -215,10 +183,6 @@ paths:
           type: integer
           format: int32
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -239,10 +203,6 @@ paths:
           type: integer
           format: int32
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -268,10 +228,6 @@ paths:
               $ref: "#/components/schemas/OrderDTO"
         required: true
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -291,10 +247,6 @@ paths:
           type: integer
           format: int32
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -315,10 +267,6 @@ paths:
           type: integer
           format: int32
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -344,39 +292,6 @@ paths:
               $ref: "#/components/schemas/LocationDTO"
         required: true
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
-        "200":
-          description: OK
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/LocationDTO"
-    post:
-      tags:
-      - location-rest-controller
-      summary: Create a new location
-      operationId: createLocation
-      parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int32
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/LocationDTO"
-        required: true
-      responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -396,10 +311,6 @@ paths:
           type: integer
           format: int32
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -419,10 +330,6 @@ paths:
           type: integer
           format: int32
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -452,10 +359,6 @@ paths:
               required:
               - imageFile
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -486,10 +389,6 @@ paths:
               required:
               - imageFile
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -515,10 +414,6 @@ paths:
               $ref: "#/components/schemas/ReviewDTO"
         required: true
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -549,10 +444,6 @@ paths:
               required:
               - imageFile
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -610,10 +501,6 @@ paths:
           format: int32
           default: 10
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -631,10 +518,6 @@ paths:
               $ref: "#/components/schemas/ProductDTO"
         required: true
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -648,10 +531,6 @@ paths:
       summary: Get a list of all orders
       operationId: getOrders
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -672,16 +551,49 @@ paths:
               $ref: "#/components/schemas/OrderDTO"
         required: true
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
             '*/*':
               schema:
                 $ref: "#/components/schemas/OrderDTO"
+  /api/v1/locations/:
+    get:
+      tags:
+      - location-rest-controller
+      summary: Get all locations
+      operationId: getLocations
+      parameters:
+      - name: pageable
+        in: query
+        required: true
+        schema:
+          $ref: "#/components/schemas/Pageable"
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/PagedModelLocationDTO"
+    post:
+      tags:
+      - location-rest-controller
+      summary: Create a new location
+      operationId: createLocation
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/LocationDTO"
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/LocationDTO"
   /api/v1/auth/register:
     post:
       tags:
@@ -694,10 +606,6 @@ paths:
               $ref: "#/components/schemas/RegisterRequest"
         required: true
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -716,10 +624,6 @@ paths:
         schema:
           type: string
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -732,10 +636,6 @@ paths:
       - login-rest-controller
       operationId: logOut
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -754,10 +654,6 @@ paths:
               $ref: "#/components/schemas/LoginRequest"
         required: true
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -776,10 +672,6 @@ paths:
         schema:
           $ref: "#/components/schemas/Pageable"
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -798,10 +690,6 @@ paths:
         schema:
           $ref: "#/components/schemas/Pageable"
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -829,10 +717,6 @@ paths:
           format: int32
           default: 12
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -853,10 +737,6 @@ paths:
           type: integer
           format: int32
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -864,29 +744,6 @@ paths:
               schema:
                 type: string
                 format: byte
-  /api/v1/locations/:
-    get:
-      tags:
-      - location-rest-controller
-      summary: Get all locations
-      operationId: getLocations
-      parameters:
-      - name: pageable
-        in: query
-        required: true
-        schema:
-          $ref: "#/components/schemas/Pageable"
-      responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
-        "200":
-          description: OK
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/PagedModelLocationDTO"
   /api/v1/images/{id}:
     get:
       tags:
@@ -900,10 +757,6 @@ paths:
           type: integer
           format: int32
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -916,10 +769,6 @@ paths:
       - charts-rest-controller
       operationId: getAdminChartsInfo
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -945,10 +794,6 @@ paths:
           type: integer
           format: int32
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -974,10 +819,6 @@ paths:
           type: integer
           format: int32
       responses:
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
         "200":
           description: OK
           content:
@@ -1086,7 +927,7 @@ components:
       properties:
         id:
           type: integer
-          format: int64
+          format: int32
         name:
           type: string
         surnames:
@@ -1349,6 +1190,10 @@ components:
           items:
             type: integer
             format: int32
+        categoriesSoldLabels:
+          type: array
+          items:
+            type: string
         newUsersPerMonth:
           type: array
           items:
